@@ -15,7 +15,6 @@
     Ext.Msg.confirm(this.i18n.confirmation, this.i18n.areYouSure, function(btn){
       if (btn == 'yes') {
         var records = [];
-        var selection = this.getView().getSelectedNodes();
         this.getSelectionModel().selected.each(function(r){
           if (r.isNew) {
             // this record is not know to server - simply remove from store
